# usvseg_python

./: LICENSE.txt  README.md  ThirdPartyNotices.txt  pyproject.toml  start_gui.py
usvseg/: __init__.py  func.py  gui.py  usvseg_prm.yaml
